# aptos-verify

./: .gitignore  Dockerfile  README.md  cli.py  pyproject.toml  requirement.txt  requirements.txt  run.py  server.py  setup.py  test.py
aptos_verify/: cli.py  config.py  const.py  decorators.py  exceptions.py  main.py  memory.py  schemas.py  server.py  utils.py
aptos_verify/rules/: compare_bytecode.py  compare_github.py  compare_local.py
examples/: verify_cli.sh  verify_module.py
move/template/: Move.toml
tests/: test_rules.py  test_utils.py
