[tool.poetry]
name = "aptos-verify"
version = "1.0.1"
authors = ["Phong Pham"]
description = "A small example package"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "aptos_verify"}]
repository = "https://github.com/aptscan-ai/aptos-verify"

[tool.poetry.dependencies]
python = "^3.8.1"
annotated-types = "0.6.0"
anyio = "4.0.0"
aptos-sdk = "0.7.1"
autopep8 = "2.0.4"
build = "1.0.3"
cachecontrol = "0.13.1"
certifi = "2023.7.22"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
crashtest = "0.4.1"
distlib = "0.3.7"
dulwich = "0.21.6"
fastjsonschema = "2.18.1"
filelock = "3.13.1"
h11 = "0.14.0"
h2 = "4.1.0"
hpack = "4.0.0"
httpcore = "0.17.3"
httpx = "0.24.1"
hyperframe = "6.0.1"
idna = "3.4"
importlib-metadata = "6.8.0"
installer = "0.7.0"
jaraco-classes = "3.3.0"
keyring = "24.2.0"
more-itertools = "10.1.0"
msgpack = "1.0.7"
packaging = "23.2"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
poetry = "1.7.0"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
ptyprocess = "0.7.0"
pycodestyle = "2.11.1"
pycparser = "2.21"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
pynacl = "1.5.0"
pyproject-hooks = "1.0.0"
rapidfuzz = "3.5.2"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
sniffio = "1.3.0"
tomlkit = "0.12.2"
trove-classifiers = "2023.10.18"
typing-extensions = "4.8.0"
urllib3 = "2.0.7"
virtualenv = "20.24.6"
xattr = "0.10.1"
zipp = "3.17.0"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/aptscan-ai/aptos-verify"
"Bug Tracker" = "https://github.com/aptscan-ai/aptos-verify/issues"

[tool.poetry.scripts]
aptos-verify = 'aptos_verify.cli:run'